--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,7 @@
     "lint:fix": "npx eslint --fix",
     "prettier": "npx prettier src --check",
     "prettier:fix": "npx prettier src --write",
-    "format": "npm run prettier:fix && npm run lint:fix",
-    "start": "react-scripts start"
+    "format": "npm run prettier:fix && npm run lint:fix"
   },
   "dependencies": {
     "@fluentui/react": "^8.105.3",
@@ -28,7 +27,6 @@
     "react-markdown": "^7.0.1",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-uuid": "^2.0.0",
     "rehype-raw": "^6.1.1",
@@ -71,17 +69,5 @@
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "vite": "^4.1.5"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
