--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-spring-3d-carousel": "^1.3.4",
     "react-swipeable": "^7.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-use-gesture": "^9.1.3",
     "react-uuid": "^2.0.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
