--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Test with pytest
       run: |
         export PYTHONPATH=$(pwd)
-        coverage run pytest -v --show-capture=stdout -k "not integration"
+        coverage run -m pytest -v --show-capture=stdout -k "not integration"
         coverage report -m
 
   test_windows:
@@ -48,5 +48,5 @@ jobs:
     - name: Test with pytest
       run: |
         $env:PYTHONPATH=$pwd
-        coverage run pytest -v --show-capture=stdout -k "not integration"
+        coverage run -m pytest -v --show-capture=stdout -k "not integration"
         coverage report -m
