--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Test with pytest
       run: |
         export PYTHONPATH=$(pwd)
-        coverage run -m pytest -v --show-capture=stdout -k "not integration"
+        coverage run --omit=tests/integration_tests -m pytest -v --show-capture=stdout -k "not integration"
         coverage report -m
         coverage xml
 
@@ -69,5 +69,4 @@ jobs:
     - name: Test with pytest
       run: |
         $env:PYTHONPATH=$pwd
-        coverage run -m pytest -v --show-capture=stdout -k "not integration"
-        coverage report -m
+        pytest -v --show-capture=stdout -k "not integration"
