--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,11 @@
     "lodash-es": "^4.17.21",
     "plotly.js": "^2.32.0",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
     "react-markdown": "^7.0.1",
     "react-plotly.js": "^2.6.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.8.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-uuid": "^2.0.0",
