--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --mode development",
     "watch": "tsc && vite build --watch",
     "test": "jest",
     "lint": "npx eslint src",
@@ -18,6 +18,7 @@
     "@fluentui/react": "^8.105.3",
     "@fluentui/react-hooks": "^8.6.29",
     "@fluentui/react-icons": "^2.0.195",
+    "@newjersey/feedback-widget": "^0.5.0",
     "dompurify": "^3.0.8",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -25,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^7.0.1",
+    "react-pdftotext": "^1.3.0",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.8.1",
     "react-syntax-highlighter": "^15.5.0",
