--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "lodash-es": "^4.17.21",
     "plotly.js": "^2.32.0",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^7.0.1",
     "react-multi-carousel": "^2.8.5",
@@ -48,6 +49,7 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.7",
     "@types/react": "^18.0.27",
+    "@types/react-autosuggest": "^10.1.11",
     "@types/react-dom": "^18.0.10",
     "@types/react-plotly.js": "^2.6.3",
     "@types/react-syntax-highlighter": "^15.5.11",
