--- a/.env.sample
+++ b/.env.sample
@@ -24,9 +24,9 @@ AZURE_OPENAI_EMBEDDING_NAME=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
-UI_TITLE=
-UI_LOGO=
-UI_CHAT_LOGO=
+UI_TITLE= Krill Arctic Foods Ambassador
+UI_LOGO= https://i.imgur.com/pbb0LFb.png
+UI_CHAT_LOGO= https://i.imgur.com/pbb0LFb.png
 UI_CHAT_TITLE=
 UI_CHAT_DESCRIPTION=
 UI_FAVICON=
