--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
     "react-markdown": "^7.0.1",
+    "react-modal": "^3.16.1",
     "react-plotly.js": "^2.6.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.8.1",
@@ -46,6 +47,7 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-modal": "^3.16.3",
     "@types/react-plotly.js": "^2.6.3",
     "@types/react-syntax-highlighter": "^15.5.11",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
