--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,23 +28,23 @@ jobs:
         pip install -r requirements-dev.txt
     - name: Test with pytest
       env:
-        AZUREOPENAIENDPOINT: ${{ secrets.AZUREOPENAIENDPOINT }}
-        AZUREOPENAIMODEL: ${{ secrets.AZUREOPENAIMODEL }}
-        AZUREOPENAIKEY: ${{ secrets.AZUREOPENAIKEY }}
-        AZUREOPENAIEMBEDDINGNAME: ${{ secrets.AZUREOPENAIEMBEDDINGNAME }}
-        AZURECOSMOSDBACCOUNT: ${{ secrets.AZURECOSMOSDBACCOUNT }}
-        AZURECOSMOSDBDATABASE: ${{ secrets.AZURECOSMOSDBDATABASE }}
-        AZURECOSMOSDBCONVERSATIONSCONTAINER: ${{ secrets.AZURECOSMOSDBCONVERSATIONSCONTAINER }}
-        AZURECOSMOSDBACCOUNTKEY: ${{ secrets.AZURECOSMOSDBACCOUNTKEY }}
-        AZURESEARCHSERVICE: ${{ secrets.AZURESEARCHSERVICE }}
-        AZURESEARCHINDEX: ${{ secrets.AZURESEARCHINDEX }}
-        AZURESEARCHKEY: ${{ secrets.AZURESEARCHKEY }}
-        AZURESEARCHQUERY: ${{ secrets.AZURESEARCHQUERY }}
-        ELASTICSEARCHEMBEDDINGMODELID: ${{ secrets.ELASTICSEARCHEMBEDDINGMODELID }}
-        ELASTICSEARCHENCODEDAPIKEY: ${{ secrets.ELASTICSEARCHENCODEDAPIKEY }}
-        ELASTICSEARCHENDPOINT: ${{ secrets.ELASTICSEARCHENDPOINT }}
-        ELASTICSEARCHINDEX: ${{ secrets.ELASTICSEARCHINDEX }}
-        ELASTICSEARCHQUERY: ${{ secrets.ELASTICSEARCHQUERY }}
+        AZURE_OPENAI_ENDPOINT: ${{ secrets.AZUREOPENAIENDPOINT }}
+        AZURE_OPENAI_MODEL: ${{ secrets.AZUREOPENAIMODEL }}
+        AZURE_OPENAI_KEY: ${{ secrets.AZUREOPENAIKEY }}
+        AZURE_OPENAI_EMBEDDING_NAME: ${{ secrets.AZUREOPENAIEMBEDDINGNAME }}
+        AZURE_COSMOSDB_ACCOUNT: ${{ secrets.AZURECOSMOSDBACCOUNT }}
+        AZURE_COSMOSDB_DATABASE: ${{ secrets.AZURECOSMOSDBDATABASE }}
+        AZURE_COSMOSDB_CONVERSATIONS_CONTAINER: ${{ secrets.AZURECOSMOSDBCONVERSATIONSCONTAINER }}
+        AZURE_COSMOSDB_ACCOUNT_KEY: ${{ secrets.AZURECOSMOSDBACCOUNTKEY }}
+        AZURE_SEARCH_SERVICE: ${{ secrets.AZURESEARCHSERVICE }}
+        AZURE_SEARCH_INDEX: ${{ secrets.AZURESEARCHINDEX }}
+        AZURE_SEARCH_KEY: ${{ secrets.AZURESEARCHKEY }}
+        AZURE_SEARCH_QUERY: ${{ secrets.AZURESEARCHQUERY }}
+        ELASTICSEARCH_EMBEDDING_MODEL_ID: ${{ secrets.ELASTICSEARCHEMBEDDINGMODELID }}
+        ELASTICSEARCH_ENCODED_API_KEY: ${{ secrets.ELASTICSEARCHENCODEDAPIKEY }}
+        ELASTICSEARCH_ENDPOINT: ${{ secrets.ELASTICSEARCHENDPOINT }}
+        ELASTICSEARCH_INDEX: ${{ secrets.ELASTICSEARCHINDEX }}
+        ELASTICSEARCH_QUERY: ${{ secrets.ELASTICSEARCHQUERY }}
       run: |
         export PYTHONPATH=$(pwd)
         coverage run -m pytest -v --show-capture=stdout
