--- a/.github/workflows/app-cd.yml
+++ b/.github/workflows/app-cd.yml
@@ -7,10 +7,10 @@ on:
       - develop
   release:
     types: [published]
-    
+
 permissions:
-      id-token: write
-      contents: read
+  id-token: write
+  contents: read
 
 jobs:
   deploy:
@@ -25,9 +25,9 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Install Azure CLI
-      run: |
-        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+    # - name: Install Azure CLI
+    #   run: |
+    #     curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
     - name: Azure Login
       uses: azure/login@v1
@@ -35,19 +35,19 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
+    
     - name: Deploy to Azure Web App
       run: |
-        az webapp up --runtime PYTHON:3.11 --sku B1 --name ${{ vars.WEBAPP_NAME }} --resource-group ${{ vars.RESOURCE_GROUP }} --location ${{ vars.LOCATION }} --subscription ${{ vars.SUBSCRIPTION}}
+        az webapp up --runtime "PYTHON:3.11" --sku B1 --name ${{ vars.WEBAPP_NAME }} --resource-group ${{ vars.RESOURCE_GROUP }} --location ${{ vars.LOCATION }} --subscription ${{ vars.SUBSCRIPTION }}
         az webapp config set --startup-file "python3 -m gunicorn app:app" --name ${{ vars.WEBAPP_NAME }}
 
     - name: Set Web App Environment Variables
       run: |
         az webapp config appsettings set --name ${{ vars.WEBAPP_NAME }} --resource-group ${{ vars.RESOURCE_GROUP }} --settings \
-          AZURE_OPENAI_EMBEDDING_NAME="${{ vars.AZURE_OPENAI_EMBEDDING_NAME }}" \
-          AZURE_OPENAI_ENDPOINT="${{ vars.AZURE_OPENAI_ENDPOINT }}" \
-          AZURE_OPENAI_MODEL="${{ vars.AZURE_OPENAI_MODEL }}"
+          AZURE_OPENAI_EMBEDDING_NAME=${{ vars.AZURE_OPENAI_EMBEDDING_NAME }} \
+          AZURE_OPENAI_ENDPOINT=${{ vars.AZURE_OPENAI_ENDPOINT }} \
+          AZURE_OPENAI_MODEL=${{ vars.AZURE_OPENAI_MODEL }}
 
-    - name: logout
+    - name: Azure Logout
       run: |
         az logout
