--- a/.github/workflows/app-cd.yml
+++ b/.github/workflows/app-cd.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - develop
   release:
     types: [published]
 
@@ -25,28 +24,39 @@ jobs:
       with:
         python-version: '3.11'
 
-    # - name: Install Azure CLI
-    #   run: |
-    #     curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+    - name: Install Azure CLI
+      run: |
+        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
     - name: Azure Login
-      uses: azure/login@v1
+      uses: azure/login@v1.4.6
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-    
+
     - name: Deploy to Azure Web App
+      env:
+        WEBAPP_NAME: ${{ secrets.WEBAPP_NAME }}
+        RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
+        LOCATION: ${{ secrets.LOCATION }}
+        SUBSCRIPTION: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       run: |
-        az webapp up --runtime "PYTHON:3.11" --sku B1 --name ${{ vars.WEBAPP_NAME }} --resource-group ${{ vars.RESOURCE_GROUP }} --location ${{ vars.LOCATION }} --subscription ${{ vars.SUBSCRIPTION }}
-        az webapp config set --startup-file "python3 -m gunicorn app:app" --name ${{ vars.WEBAPP_NAME }}
+        az webapp up --runtime "PYTHON:3.11" --sku B1 --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --location $LOCATION --subscription $SUBSCRIPTION
+        az webapp config set --startup-file "python3 -m gunicorn app:app" --name $WEBAPP_NAME
 
     - name: Set Web App Environment Variables
+      env:
+        WEBAPP_NAME: ${{ secrets.WEBAPP_NAME }}
+        RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
+        AZURE_OPENAI_EMBEDDING_NAME: ${{ secrets.AZURE_OPENAI_EMBEDDING_NAME }}
+        AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
+        AZURE_OPENAI_MODEL: ${{ secrets.AZURE_OPENAI_MODEL }}
       run: |
-        az webapp config appsettings set --name ${{ vars.WEBAPP_NAME }} --resource-group ${{ vars.RESOURCE_GROUP }} --settings \
-          AZURE_OPENAI_EMBEDDING_NAME=${{ vars.AZURE_OPENAI_EMBEDDING_NAME }} \
-          AZURE_OPENAI_ENDPOINT=${{ vars.AZURE_OPENAI_ENDPOINT }} \
-          AZURE_OPENAI_MODEL=${{ vars.AZURE_OPENAI_MODEL }}
+        az webapp config appsettings set --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --settings \
+          AZURE_OPENAI_EMBEDDING_NAME=$AZURE_OPENAI_EMBEDDING_NAME \
+          AZURE_OPENAI_ENDPOINT=$AZURE_OPENAI_ENDPOINT \
+          AZURE_OPENAI_MODEL=$AZURE_OPENAI_MODEL
 
     - name: Azure Logout
       run: |
