--- a/.github/workflows/app-cd.yml
+++ b/.github/workflows/app-cd.yml
@@ -24,12 +24,12 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Install Azure CLI
-      run: |
-        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+    # - name: Install Azure CLI
+    #   run: |
+    #     curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
     - name: Azure Login
-      uses: azure/login@v1.4.6
+      uses: azure/login@v1
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
