--- a/.github/workflows/app-cd.yml
+++ b/.github/workflows/app-cd.yml
@@ -37,10 +37,10 @@ jobs:
 
     - name: Deploy to Azure Web App
       env:
-        WEBAPP_NAME: ${{ secrets.WEBAPP_NAME }}
-        RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
-        LOCATION: ${{ secrets.LOCATION }}
-        SUBSCRIPTION: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        WEBAPP_NAME: ${{ vars.WEBAPP_NAME }}
+        RESOURCE_GROUP: ${{ vars.RESOURCE_GROUP }}
+        LOCATION: ${{ vars.LOCATION }}
+        SUBSCRIPTION: ${{ vars.SUBSCRIPTION }}
       run: |
         az webapp up --runtime "PYTHON:3.11" --sku B1 --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --location $LOCATION --subscription $SUBSCRIPTION
         az webapp config set --startup-file "python3 -m gunicorn app:app" --name $WEBAPP_NAME
