--- a/.github/workflows/app-cd.yml
+++ b/.github/workflows/app-cd.yml
@@ -1,3 +1,40 @@
+# name: Deploy to Azure Web App
+
+# on:
+#   push:
+#     branches:
+#       - main
+#   release:
+#     types: [published]
+
+# permissions:
+#   id-token: write
+#   contents: read
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - uses: actions/checkout@v2
+
+#     - name: Set up Python
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: '3.11'
+
+#     - name: Azure Login
+#       uses: azure/login@v1
+#       with:
+#         client-id: ${{ secrets.AZURE_CLIENT_ID }}
+#         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+#         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+
+#     - name: Azure Logout
+#       run: |
+#         az logout
+
 name: Deploy to Azure Web App
 
 on:
@@ -14,6 +51,7 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: ${{ github.event_name == 'release' && 'prod' || 'test' }}  # Set environment based on the event
 
     steps:
     - uses: actions/checkout@v2
@@ -29,6 +67,29 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+    - name: Deploy to Azure Web App
+      env:
+        WEBAPP_NAME: ${{ secrets.WEBAPP_NAME }}
+        RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
+        LOCATION: ${{ secrets.LOCATION }}
+        SUBSCRIPTION: ${{ secrets.SUBSCRIPTION }}
+      run: |
+        az webapp up --runtime "PYTHON:3.11" --sku B1 --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --location $LOCATION --subscription $SUBSCRIPTION
+        az webapp config set --startup-file "python3 -m gunicorn app:app" --name $WEBAPP_NAME
+
+    - name: Set Web App Environment Variables
+      env:
+        WEBAPP_NAME: ${{ secrets.WEBAPP_NAME }}
+        RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
+        AZURE_OPENAI_EMBEDDING_NAME: ${{ secrets.AZURE_OPENAI_EMBEDDING_NAME }}
+        AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
+        AZURE_OPENAI_MODEL: ${{ secrets.AZURE_OPENAI_MODEL }}
+      run: |
+        az webapp config appsettings set --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --settings \
+          AZURE_OPENAI_EMBEDDING_NAME=$AZURE_OPENAI_EMBEDDING_NAME \
+          AZURE_OPENAI_ENDPOINT=$AZURE_OPENAI_ENDPOINT \
+          AZURE_OPENAI_MODEL=$AZURE_OPENAI_MODEL
 
     - name: Azure Logout
       run: |
