--- a/.github/workflows/app-cd-new.yml
+++ b/.github/workflows/app-cd-new.yml
@@ -30,15 +30,15 @@ jobs:
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID_TEST }}
 
-    - name: Deploy to Azure Web App
-      env:
-        WEBAPP_NAME: ${{ vars.WEBAPP_NAME }}
-        RESOURCE_GROUP: ${{ vars.RESOURCE_GROUP }}
-        LOCATION: ${{ vars.LOCATION }}
-        SUBSCRIPTION: ${{ vars.SUBSCRIPTION }}
-      run: |
-        az webapp up --runtime "PYTHON:3.11" --sku B1 --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --location $LOCATION --subscription $SUBSCRIPTION
-        az webapp config set --startup-file "python3 -m gunicorn app:app" --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP
+    # - name: Deploy to Azure Web App
+    #   env:
+    #     WEBAPP_NAME: ${{ vars.WEBAPP_NAME }}
+    #     RESOURCE_GROUP: ${{ vars.RESOURCE_GROUP }}
+    #     LOCATION: ${{ vars.LOCATION }}
+    #     SUBSCRIPTION: ${{ vars.SUBSCRIPTION }}
+    #   run: |
+    #     az webapp up --runtime "PYTHON:3.11" --sku B1 --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --location $LOCATION --subscription $SUBSCRIPTION
+    #     az webapp config set --startup-file "python3 -m gunicorn app:app" --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP
 
     # - name: Set Web App Environment Variables
     #   env:
