--- a/.github/workflows/app-cd-new.yml
+++ b/.github/workflows/app-cd-new.yml
@@ -37,8 +37,8 @@ jobs:
         LOCATION: ${{ vars.LOCATION }}
         SUBSCRIPTION: ${{ vars.SUBSCRIPTION }}
       run: |
-        az webapp up --runtime "PYTHON:3.11" --sku B1 --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --location "$LOCATION" --subscription $SUBSCRIPTION
-        az webapp config set --startup-file "python3 -m gunicorn app:app" --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP
+        az webapp up --runtime "PYTHON:3.11" --sku B1 --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP
+        az webapp config set --startup-file "python3 -m gunicorn app:app" --name $WEBAPP_NAME 
 
     - name: Set Web App Environment Variables
       env:
