--- a/.github/workflows/app-cd-new.yml
+++ b/.github/workflows/app-cd-new.yml
@@ -34,9 +34,10 @@ jobs:
       env:
         WEBAPP_NAME: ${{ vars.WEBAPP_NAME }}
         RESOURCE_GROUP: ${{ vars.RESOURCE_GROUP }}
+        SUBSCRIPTION: ${{ vars.SUBSCRIPTION }}
       run: |
         az webapp up --runtime "PYTHON:3.11" --sku B1 --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP
-        az webapp config set --startup-file "python3 -m gunicorn app:app" --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP
+        az webapp config set --startup-file "python3 -m gunicorn app:app" --name $WEBAPP_NAME 
 
     - name: Set Web App Environment Variables
       env:
