--- a/.github/workflows/app-cd-new-test.yml
+++ b/.github/workflows/app-cd-new-test.yml
@@ -32,9 +32,9 @@ jobs:
 
     - name: Deploy to Azure Web App
       env:
-        WEBAPP_NAME: ${{ secrets.WEBAPP_NAME_TEST }}
-        RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP_TEST}}
-        APP_SERVICE_PLAN: ${{ secrets.APP_SERVICE_PLAN_TEST}}
+        WEBAPP_NAME: ${{ vars.WEBAPP_NAME_TEST }}
+        RESOURCE_GROUP: ${{ vars.RESOURCE_GROUP_TEST}}
+        APP_SERVICE_PLAN: ${{ vars.APP_SERVICE_PLAN_TEST}}
       run: |
         az webapp up --runtime "PYTHON:3.11" --sku B1 --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --plan $APP_SERVICE_PLAN
         az webapp config set --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --startup-file "python3 -m gunicorn app:app"
