--- a/.github/workflows/app-cd-new-test.yml
+++ b/.github/workflows/app-cd-new-test.yml
@@ -33,11 +33,13 @@ jobs:
     - name: Deploy to Azure Web App
       env:
         WEBAPP_NAME: ${{ vars.WEBAPP_NAME_TEST }}
+        LOCATION: ${{ vars.LOCATION }}
         RESOURCE_GROUP: ${{ vars.RESOURCE_GROUP_TEST}}
-        APP_SERVICE_PLAN: ${{ vars.APP_SERVICE_PLAN_TEST}}
+        SUBSCRIPTION: ${{ vars.SUBSCRIPTION_TEST}}
       run: |
-        az webapp up --runtime "PYTHON:3.11" --sku B1 --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --plan $APP_SERVICE_PLAN
-        az webapp config set --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --startup-file "python3 -m gunicorn app:app"
+        
+        az webapp up --runtime PYTHON:3.11 --sku B1 --name $WEBAPP_NAME--resource-group $RESOURCE_GROUP --location "$LOCATION" --subscription SUBSCRIPTION
+        az webapp config set --startup-file "python3 -m gunicorn app:app" --name $WEBAPP_NAME
 
     - name: Set Web App Environment Variables
       env:
