--- a/.github/workflows/app-cd-new-test.yml
+++ b/.github/workflows/app-cd-new-test.yml
@@ -35,9 +35,9 @@ jobs:
         WEBAPP_NAME: ${{ vars.WEBAPP_NAME_TEST }}
         LOCATION: ${{ vars.LOCATION }}
         RESOURCE_GROUP: ${{ vars.RESOURCE_GROUP_TEST}}
-        SUBSCRIPTION: ${{ vars.SUBSCRIPTION_TEST}}
+        SERVICE_PLAN: ${{ vars.SERVICE_PLAN_TEST}}
       run: |
-        az webapp up --runtime PYTHON:3.11 --sku B1 --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --location "$LOCATION" --plan $SUBSCRIPTION
+        az webapp up --runtime PYTHON:3.11 --sku B1 --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --location "$LOCATION" --plan $SERVICE_PLAN
         az webapp config set --startup-file "python3 -m gunicorn app:app" --name $WEBAPP_NAME
 
     - name: Set Web App Environment Variables
