--- a/.github/workflows/app-cd-new-test.yml
+++ b/.github/workflows/app-cd-new-test.yml
@@ -38,7 +38,7 @@ jobs:
         SUBSCRIPTION: ${{ vars.SUBSCRIPTION_TEST}}
         SERVICE_PLAN: ${{ vars.SERVICE_PLAN_TEST}}
       run: |
-        az webapp up --runtime PYTHON:3.11 --sku B1 --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --location "$LOCATION" --subscription SUBSCRIPTION --plan $SERVICE_PLAN
+        az webapp up --runtime PYTHON:3.11 --sku B1 --name $WEBAPP_NAME --resource-group $RESOURCE_GROUP --location "$LOCATION" --subscription $SUBSCRIPTION --plan $SERVICE_PLAN
         az webapp config set --startup-file "python3 -m gunicorn app:app" --name $WEBAPP_NAME
 
     - name: Set Web App Environment Variables
