--- a/.github/workflows/app-cd-new-test copy.yml
+++ b/.github/workflows/app-cd-new-test copy.yml
@@ -40,10 +40,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run tests
-      run: |
-        # Add your test commands here
-        npm test
+    # - name: Run tests
+    #   run: |
+    #     # Add your test commands here
+    #     npm test
 
     - name: Azure Login
       uses: azure/login@v1
