--- a/.github/workflows/app-cd-new-test .yml
+++ b/.github/workflows/app-cd-new-test .yml
@@ -13,7 +13,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
-    steps:
+  steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
@@ -24,12 +24,12 @@ jobs:
 
     - name: Install frontend dependencies
       working-directory: frontend
-      run: npm ci
+      run: npm install
 
     - name: Build frontend
       working-directory: frontend
       run: npm run build
-
+  
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
