--- a/.github/workflows/app-cd-new-test .yml
+++ b/.github/workflows/app-cd-new-test .yml
@@ -38,7 +38,8 @@ jobs:
       - name: Create and activate virtual environment
         run: |
           python -m venv venv
-          echo "source venv/bin/activate" >> $GITHUB_ENV
+          echo "VIRTUAL_ENV=${{ github.workspace }}/venv" >> $GITHUB_ENV
+          echo "${{ github.workspace }}/venv/bin" >> $GITHUB_PATH
 
       - name: Install dependencies
         run: pip install -r requirements.txt
@@ -46,6 +47,7 @@ jobs:
       - name: Zip artifact for deployment
         run: |
           zip -r release.zip . -x "venv/*" "node_modules/*" ".git/*"
+
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
