--- a/.github/workflows/app-cd-new-test .yml
+++ b/.github/workflows/app-cd-new-test .yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '16'
 
       - name: Install frontend dependencies
         working-directory: frontend
@@ -44,17 +44,6 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Zip artifact for deployment
-        run: |
-          zip -r release.zip . -x "venv/*" "node_modules/*" ".git/*"
-
-
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v3
-        with:
-          name: python-app
-          path: release.zip      
-
       # Uncomment and configure this step if you have tests
       # - name: Run tests
       #   run: |
@@ -68,9 +57,88 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID_TEST }}
 
+      - name: Set Web App Configuration
+        run: |
+          az webapp config appsettings set -g ${{ vars.RESOURCE_GROUP_TEST }} -n ${{ vars.WEBAPP_NAME_TEST }} --settings WEBSITE_WEBDEPLOY_USE_SCM=false
+
       - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: ${{ vars.WEBAPP_NAME_TEST }}
-          resource-group-name: ${{ vars.RESOURCE_GROUP_TEST }}
-          package: release.zip
+        run: |
+          az webapp up --runtime PYTHON:3.11 --sku B1 --name ${{ vars.WEBAPP_NAME_TEST }} --resource-group ${{ vars.RESOURCE_GROUP_TEST }} --location "${{ vars.LOCATION }}" --subscription ${{ vars.SUBSCRIPTION_TEST }}
+          az webapp config set --startup-file "python3 -m gunicorn app:app" --name ${{ vars.WEBAPP_NAME_TEST }} --resource-group ${{ vars.RESOURCE_GROUP_TEST }}
+
+# name: CI/CD Pipeline
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# permissions:
+#   id-token: write
+#   contents: read
+
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
+
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: '16'
+
+#       - name: Install frontend dependencies
+#         working-directory: frontend
+#         run: npm install
+
+#       - name: Build frontend
+#         working-directory: frontend
+#         run: npm run build
+
+#       - name: Set up Python
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: '3.11'
+
+#       - name: Create and activate virtual environment
+#         run: |
+#           python -m venv venv
+#           echo "VIRTUAL_ENV=${{ github.workspace }}/venv" >> $GITHUB_ENV
+#           echo "${{ github.workspace }}/venv/bin" >> $GITHUB_PATH
+
+#       - name: Install dependencies
+#         run: pip install -r requirements.txt
+
+#       - name: Zip artifact for deployment
+#         run: |
+#           zip -r release.zip . -x "venv/*" "node_modules/*" ".git/*"
+
+
+#       - name: Upload artifact for deployment jobs
+#         uses: actions/upload-artifact@v3
+#         with:
+#           name: python-app
+#           path: release.zip      
+
+#       # Uncomment and configure this step if you have tests
+#       # - name: Run tests
+#       #   run: |
+#       #     # Add your test commands here
+#       #     # npm test
+
+#       - name: Azure Login
+#         uses: azure/login@v1
+#         with:
+#           client-id: ${{ secrets.AZURE_CLIENT_ID_TEST }}
+#           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+#           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID_TEST }}
+
+#       - name: Deploy to Azure Web App
+#         uses: azure/webapps-deploy@v2
+#         with:
+#           app-name: ${{ vars.WEBAPP_NAME_TEST }}
+#           resource-group-name: ${{ vars.RESOURCE_GROUP_TEST }}
+#           package: release.zip
